# ares

./: .gitmodules  README.md
account/: CMakeLists.txt
account/src/: config.cpp  config.hpp  macros.h  main.cpp  predeclare.hpp  recv_handler.cpp  recv_handler.hpp  send_handler.cpp  send_handler.hpp  server.cpp  server.hpp  session.cpp  session.hpp  session_timers.cpp  state.cpp  state.hpp
account/src/char_server/: ATHENA_HA_ACCOUNT_DATA_REQ.cpp  ATHENA_HA_AID_AUTH_REQ.cpp  ATHENA_HA_ONLINE_AIDS.cpp  ATHENA_HA_PING_REQ.cpp  ATHENA_HA_SET_AID_OFFLINE.cpp  ATHENA_HA_SET_AID_ONLINE.cpp  ATHENA_HA_USER_COUNT.cpp  packet_handlers.hpp  state.cpp  state.hpp
account/src/character_server/: ARES_HA_ACCOUNT_AUTH_REQ.cpp  ARES_HA_AID_AUTH_REQ.cpp  ARES_HA_ONLINE_ACCOUNTS.cpp  ARES_HA_PING_REQ.cpp  ARES_HA_USER_COUNT.cpp  ATHENA_HA_ACCOUNT_DATA_REQ.cpp  ATHENA_HA_AID_AUTH_REQ.cpp  ATHENA_HA_ONLINE_AIDS.cpp  ATHENA_HA_PING_REQ.cpp  ATHENA_HA_SET_AID_OFFLINE.cpp  ATHENA_HA_SET_AID_ONLINE.cpp  ATHENA_HA_USER_COUNT.cpp  state.cpp  state.hpp
account/src/client/: packet_handlers.hpp  state.cpp  state.hpp
account/src/database/: create_user.cpp  database.cpp  database.hpp  password_matches.cpp  structs.hpp  user_data.cpp  user_exists.cpp
account/src/mono/: ARES_HA_LOGIN_REQ.cpp  ATHENA_HA_LOGIN_REQ.cpp  ATHENA_HA_PING_REQ.cpp  CA_EXE_HASHCHECK.cpp  CA_SSO_LOGIN_REQ.cpp  CA_SSO_LOGIN_REQ.hpp  CA_SSO_LOGIN_REQ_0x64.cpp  CA_SSO_LOGIN_REQ_0x64.hpp  CA_SSO_LOGIN_REQ_auth_token.cpp  CA_SSO_LOGIN_REQ_login_password.cpp  packet_handlers.hpp  state.cpp  state.hpp
character/: CMakeLists.txt
character/src/: auth_request_manager.cpp  auth_request_manager.hpp  config.cpp  config.hpp  macros.h  main.cpp  maps.cpp  maps_manager.cpp  maps_manager.hpp  predeclare.hpp  recv_handler.cpp  recv_handler.hpp  send_handler.cpp  send_handler.hpp  server.cpp  server.hpp  session.cpp  session.hpp  session_timers.cpp  state.cpp  state.hpp
character/src/account_server/: ARES_AH_ACCOUNT_AUTH_RESULT.cpp  ARES_AH_AID_AUTH_RESULT.cpp  ARES_AH_KICK_ACCOUNT.cpp  ARES_AH_LOGIN_RESULT.cpp  ARES_AH_PING_ACK.cpp  ATHENA_AH_ACCOUNT_DATA_RESULT.cpp  ATHENA_AH_AID_AUTH_RESULT.cpp  ATHENA_AH_KICK_AID.cpp  ATHENA_AH_LOGIN_RESULT.cpp  ATHENA_AH_PING_ACK.cpp  packet_handlers.hpp  state.cpp  state.hpp  timers.cpp  timers.hpp
character/src/client/: CH_CHAR_PAGE_REQ.cpp  CH_MAKE_CHAR.cpp  CH_SELECT_CHAR.cpp  PING.cpp  packet_handlers.hpp  state.cpp  state.hpp
character/src/database/: acc_data.cpp  account_create.cpp  account_slots.cpp  account_storage.cpp  char_data.cpp  character_info.cpp  database.cpp  database.hpp  make_char.cpp  map_index.cpp  num_chars_for_aid.cpp  structs.hpp
character/src/mono/: ARES_ZH_LOGIN_REQ.cpp  ATHENA_ZH_LOGIN_REQ.cpp  CH_ENTER.cpp  CH_ENTER.hpp  packet_handlers.hpp  state.cpp  state.hpp
character/src/zone_server/: ARES_ZH_CHAR_AUTH_REQ.cpp  ARES_ZH_CID_AUTH_REQ.cpp  ARES_ZH_GAME_RATES.cpp  ARES_ZH_MAP_IDS_REQ.cpp  ARES_ZH_MAP_ID_LOADED.cpp  ARES_ZH_MAP_NAMES_REQ.cpp  ARES_ZH_PING_REQ.cpp  ATHENA_ZH_CID_AUTH_REQ.cpp  ATHENA_ZH_GAME_RATES.cpp  ATHENA_ZH_MAP_NAMES.cpp  ATHENA_ZH_ONLINE_USERS.cpp  ATHENA_ZH_PING_REQ.cpp  ATHENA_ZH_USER_COUNT.cpp  packet_handlers.hpp  state.cpp  state.hpp
common/: CMakeLists.txt
common/include/ares/: common  config  indestructible  map_name_index
common/src/: config.cpp  config.hpp  constants.hpp  des.hpp  grf.cpp  grf.hpp  grf_structs.hpp  indestructible.hpp  map_name_index.cpp  map_name_index.hpp  memory.cpp  memory.hpp  memory_boost.hpp  memory_std.hpp  random.cpp  random.hpp  string_conv.cpp  string_conv.hpp
config/: CMakeLists.txt
config/src/: config.cpp
database/: CMakeLists.txt
database/include/ares/: database
database/src/: accounts.hpp  characters.hpp  database.cpp  database.hpp  maps.hpp  pqxx_traits.hpp
database/src/account/: account_create.cpp  account_slots.cpp  account_storage.cpp  create_user.cpp  num_chars_for_aid.cpp  password_matches.cpp  records.hpp  user_data.cpp  user_exists.cpp
database/src/accounts/: create.cpp  create_data.cpp  exists.cpp  num_chars.cpp  password_matches.cpp  slots.cpp  storage.cpp  user_data.cpp
database/src/character/: character_info.cpp  delete_date.cpp  make_char.cpp  records.hpp
database/src/characters/: create.cpp  delete_date.cpp  info.cpp
database/src/definitions/: database.hpp
database/src/maps/: id_by_name.cpp  ids_and_names.cpp  info.cpp  update.cpp
database/src/zone/: create_map.cpp  map_index.cpp  map_info.cpp  records.hpp
network/: CMakeLists.txt
network/include/ares/: network
network/src/: acceptor.hpp  asio_handler.hpp  auth_request_manager.hpp  exceptions.hpp  handlers.hpp  macros.h  packet_handler.hpp  packet_size.hpp  receive_handler.hpp  server.hpp  session.hpp  timer.hpp
network/src/definition/: acceptor.hpp  asio_handler.hpp  auth_request_manager.hpp  handlers.hpp  packet_handler.hpp  server.hpp  session.hpp  timer.hpp
projects/CMake/: CMakeLists.txt  libpq.cmake  libpqxx.cmake  platform_checks.cmake  shared.cmake  winver.cmake  zlib.cmake
zone/: CMakeLists.txt
zone/src/: astar.cpp  astar.hpp  auth_request_manager.cpp  auth_request_manager.hpp  config.cpp  config.hpp  macros.h  main.cpp  map.cpp  map.hpp  maps_manager.cpp  maps_manager.hpp  pc.cpp  pc.hpp  pcs_manager.cpp  pcs_manager.hpp  predeclare.hpp  recv_handler.cpp  recv_handler.hpp  send_handler.cpp  send_handler.hpp  server.cpp  server.hpp  session.cpp  session.hpp  session_timers.cpp  state.cpp  state.hpp  state_shared.hpp
zone/src/character_server/: ARES_HZ_CHAR_AUTH_RESULT.cpp  ARES_HZ_CID_AUTH_OK.cpp  ARES_HZ_CID_AUTH_RESULT.cpp  ARES_HZ_LOGIN_RESULT.cpp  ARES_HZ_MAP_IDS.cpp  ARES_HZ_MAP_NAMES.cpp  ARES_HZ_PING_ACK.cpp  ARES_HZ_PRIVATE_MSG_NAME.cpp  ATHENA_HZ_CID_AUTH_FAILED.cpp  ATHENA_HZ_LOGIN_RESULT.cpp  ATHENA_HZ_PING_ACK.cpp  ATHENA_HZ_PRIVATE_MSG_NAME.cpp  packet_handlers.hpp  state.cpp  state.hpp  timers.cpp  timers.hpp
zone/src/client/: CZ_LESSEFFECT.cpp  CZ_NOTIFY_ACTORINIT.cpp  CZ_REQNAME.cpp  CZ_REQUEST_MOVE.cpp  CZ_REQUEST_TIME.cpp  CZ_REQ_GUILD_MENU.cpp  (+4 more)
zone/test/: CMakeLists.txt
(+216 files in other folders)
